--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  pyfuse3-release-2.0.0.tar.gz: 32340d0e457b4b2e8ccdd443da504c131d7a51a9
+  pyfuse3-2.0.0.tar.gz: 1ab833147a67f8697cf5a429f7d46a7aad3a7940
